--- a/apps/seekqr_app/pubspec.yaml
+++ b/apps/seekqr_app/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   qr_scanner: ^0.0.1
-
+  core: ^0.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  flutter_bloc: ^9.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +47,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
