--- a/apps/seekqr_app/pubspec_overrides.yaml
+++ b/apps/seekqr_app/pubspec_overrides.yaml
@@ -1,4 +1,6 @@
-# melos_managed_dependency_overrides: qr_scanner
+# melos_managed_dependency_overrides: qr_scanner,core
 dependency_overrides:
   qr_scanner:
     path: ..\\..\\packages\\qr_scanner
+  core:
+    path: ..\\..\\packages\\core
